--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   		     </fieldset>
 		      <button id="save_button">Save</button>
 	      </form>
+<a href="http://demo.evatic.com/EvaticMobileWeb/Default.htm#pageLogin">Demo!</a>
 		</div>
 
 	</body>
